--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ console.log('Hello World!');
     </div>
     <script>
         function goToIndex() {
-            window.location.href = 'hEditor.html';
+            window.location.href = 'editor.html';
         }
     </script>
 </body>
